ext/wikitext/wikitext_ragel.c

#line 1 "wikitext_ragel.rl"
// Copyright 2008-present Greg Hurrell. All rights reserved.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are met:
//
// 1. Redistributions of source code must retain the above copyright notice,
//    this list of conditions and the following disclaimer.
// 2. Redistributions in binary form must reproduce the above copyright notice,
//    this list of conditions and the following disclaimer in the documentation
//    and/or other materials provided with the distribution.

// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
// AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
// IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
// ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDERS OR CONTRIBUTORS BE
// LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
// CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
// SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
// INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
// CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
// ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
// POSSIBILITY OF SUCH DAMAGE.

//----------------------------------------------------------------------//
// NOTE: wikitext_ragel.c is generated from wikitext_ragel.rl, so       //
//       if you make changes to the former they will be overwritten.    //
//       You should perform all your edits in wikitext_ragel.rl.        //
//----------------------------------------------------------------------//

#include "wikitext_ragel.h"
#include "wikitext.h"
#include <stdio.h>

#define EMIT(t)     do { out->type = t; out->stop = p + 1; out->column_stop += (out->stop - out->start); } while (0)
#define MARK()      do { mark = p; } while (0)
#define REWIND()    do { p = mark; } while (0)
#define AT_END()    (p + 1 == pe)
#define DISTANCE()  (p + 1 - ts)
#define NEXT_CHAR() (*(p + 1))


#line 45 "wikitext_ragel.c"
static const int wikitext_start = 135;
static const int wikitext_first_final = 135;
static const int wikitext_error = 0;

static const int wikitext_en_main = 135;


#line 533 "wikitext_ragel.rl"


// for now we use the scanner as a tokenizer that returns one token at a time, just like ANTLR
// ultimately we could look at embedding all of the transformation inside the scanner itself (combined scanner/parser)
// pass in the last token because that's useful for the scanner to know
// p data pointer (required by Ragel machine); overriden with contents of last_token if supplied
// pe data end pointer (required by Ragel machine)
void next_token(token_t *out, token_t *last_token, unsigned char *p, unsigned char *pe)
{
    int last_token_type = NO_TOKEN;
    if (last_token)
    {
        last_token_type     = last_token->type;
        p = last_token->stop;
        out->line_start     = out->line_stop    = last_token->line_stop;
        out->column_start   = out->column_stop  = last_token->column_stop;
    }
    else
    {
        out->line_start     = 1;
        out->column_start   = 1;
        out->line_stop      = 1;
        out->column_stop    = 1;
    }
    out->type       = NO_TOKEN;
    out->code_point = 0;
    out->start      = p;
    if (p == pe)
    {
        // all done, have reached end of input
        out->stop  = p;
        out->type  = END_OF_FILE;
        return;
    }

    unsigned char *mark;      // for manual backtracking
    unsigned char *eof = pe;  // required for backtracking (longest match determination)
    int     cs;         // current state (standard Ragel)
    unsigned char *ts;        // token start (scanner)
    unsigned char *te;        // token end (scanner)
    int     act;        // identity of last patterned matched (scanner)
    
#line 96 "wikitext_ragel.c"
	{
	cs = wikitext_start;
	ts = 0;
	te = 0;
	act = 0;
	}

#line 575 "wikitext_ragel.rl"
    
#line 106 "wikitext_ragel.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
tr0:
#line 419 "wikitext_ragel.rl"
	{{p = ((te))-1;}{
            EMIT(AMP);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr3:
#line 407 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(DECIMAL_ENTITY);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr5:
#line 401 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(HEX_ENTITY);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr7:
#line 395 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(NAMED_ENTITY);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr11:
#line 389 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(AMP_ENTITY);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr15:
#line 383 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(QUOT_ENTITY);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr16:
#line 1 "NONE"
	{	switch( act ) {
	case 20:
	{{p = ((te))-1;}
            EMIT(HR);
            {p++; cs = 135; goto _out;}
        }
	break;
	case 21:
	{{p = ((te))-1;}
            EMIT(BR_CLEAR);
            {p++; cs = 135; goto _out;}
        }
	break;
	case 22:
	{{p = ((te))-1;}
            EMIT(BR);
            {p++; cs = 135; goto _out;}
        }
	break;
	case 26:
	{{p = ((te))-1;}
            EMIT(URI);
            {p++; cs = 135; goto _out;}
        }
	break;
	case 27:
	{{p = ((te))-1;}
            EMIT(MAIL);
            {p++; cs = 135; goto _out;}
        }
	break;
	case 41:
	{{p = ((te))-1;}
            EMIT(LESS);
            {p++; cs = 135; goto _out;}
        }
	break;
	case 50:
	{{p = ((te))-1;}
            EMIT(SPECIAL_URI_CHARS);
            {p++; cs = 135; goto _out;}
        }
	break;
	case 51:
	{{p = ((te))-1;}
            EMIT(ALNUM);
            {p++; cs = 135; goto _out;}
        }
	break;
	case 52:
	{{p = ((te))-1;}
            EMIT(PRINTABLE);
            {p++; cs = 135; goto _out;}
        }
	break;
	}
	}
	goto st135;
tr23:
#line 425 "wikitext_ragel.rl"
	{{p = ((te))-1;}{
            EMIT(LESS);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr39:
#line 134 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(BLOCKQUOTE_END);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr41:
#line 176 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(EM_END);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr47:
#line 104 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(NO_WIKI_END);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr50:
#line 122 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(PRE_END);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr55:
#line 276 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(SPAN_END);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr60:
#line 164 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(STRONG_END);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr62:
#line 194 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(TT_END);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr73:
#line 128 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(BLOCKQUOTE_START);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr88:
#line 170 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(EM_START);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr94:
#line 98 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(NO_WIKI_START);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr97:
#line 110 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(PRE_START);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr102:
#line 270 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(SPAN_START);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr107:
#line 158 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(STRONG_START);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr109:
#line 188 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(TT_START);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr121:
#line 116 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(PRE_START);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr122:
#line 492 "wikitext_ragel.rl"
	{{p = ((te))-1;}{
            EMIT(ALNUM);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr129:
#line 335 "wikitext_ragel.rl"
	{{p = ((te))-1;}{
            EMIT(URI);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr137:
#line 449 "wikitext_ragel.rl"
	{{p = ((te))-1;}{
            EMIT(IMG_START);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr144:
#line 437 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(IMG_START_HTTP);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr147:
#line 443 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(IMG_START_HTTPS);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr148:
#line 56 "wikitext_ragel.rl"
	{
        out->code_point = ((uint32_t)(*(p - 1)) & 0x1f) << 6 |
            (*p & 0x3f);
    }
#line 524 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(DEFAULT);
            out->column_stop = out->column_start + 1;
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr151:
#line 62 "wikitext_ragel.rl"
	{
        out->code_point = ((uint32_t)(*(p - 2)) & 0x0f) << 12 |
            ((uint32_t)(*(p - 1)) & 0x3f) << 6 |
            (*p & 0x3f);
    }
#line 524 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(DEFAULT);
            out->column_stop = out->column_start + 1;
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr154:
#line 69 "wikitext_ragel.rl"
	{
        out->code_point = ((uint32_t)(*(p - 3)) & 0x07) << 18 |
            ((uint32_t)(*(p - 2)) & 0x3f) << 12 |
            ((uint32_t)(*(p - 1)) & 0x3f) << 6 |
            (*p & 0x3f);
    }
#line 524 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(DEFAULT);
            out->column_stop = out->column_start + 1;
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr155:
#line 51 "wikitext_ragel.rl"
	{
        out->code_point = *p & 0x7f;
    }
#line 524 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(DEFAULT);
            out->column_stop = out->column_start + 1;
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr156:
#line 473 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(CRLF);
            out->column_stop = 1;
            out->line_stop++;
            {p++; cs = 135; goto _out;}
        }}
#line 51 "wikitext_ragel.rl"
	{
        out->code_point = *p & 0x7f;
    }
	goto st135;
tr160:
#line 413 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(QUOT);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr161:
#line 226 "wikitext_ragel.rl"
	{te = p+1;{
            if (out->column_start == 1              ||
                last_token_type == OL               ||
                last_token_type == UL               ||
                last_token_type == BLOCKQUOTE       ||
                last_token_type == BLOCKQUOTE_START)
                EMIT(OL);
            else
                EMIT(PRINTABLE);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr165:
#line 239 "wikitext_ragel.rl"
	{te = p+1;{
            if (out->column_start == 1              ||
                last_token_type == OL               ||
                last_token_type == UL               ||
                last_token_type == BLOCKQUOTE       ||
                last_token_type == BLOCKQUOTE_START)
                EMIT(UL);
            else
                EMIT(PRINTABLE);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr180:
#line 182 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(TT);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr182:
#line 365 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(SEPARATOR);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr187:
#line 473 "wikitext_ragel.rl"
	{te = p;p--;{
            EMIT(CRLF);
            out->column_stop = 1;
            out->line_stop++;
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr188:
#line 473 "wikitext_ragel.rl"
	{te = p+1;{
            EMIT(CRLF);
            out->column_stop = 1;
            out->line_stop++;
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr189:
#line 214 "wikitext_ragel.rl"
	{te = p;p--;{
            if (out->column_start == 1 || last_token_type == BLOCKQUOTE)
            {
                REWIND();
                EMIT(PRE);
            }
            else
                EMIT(SPACE);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr191:
#line 486 "wikitext_ragel.rl"
	{te = p;p--;{
            EMIT(SPECIAL_URI_CHARS);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr192:
#line 504 "wikitext_ragel.rl"
	{te = p;p--;{
            EMIT(PRINTABLE);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr193:
#line 419 "wikitext_ragel.rl"
	{te = p;p--;{
            EMIT(AMP);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr197:
#line 140 "wikitext_ragel.rl"
	{te = p;p--;{
            if (DISTANCE() == 5)
                EMIT(STRONG_EM);
            else if (DISTANCE() == 4)
            {
                p--;
                EMIT(STRONG_EM);
            }
            else if (DISTANCE() == 3)
                EMIT(STRONG);
            else if (DISTANCE() == 2)
                EMIT(EM);
            else
                EMIT(PRINTABLE);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr201:
#line 140 "wikitext_ragel.rl"
	{te = p+1;{
            if (DISTANCE() == 5)
                EMIT(STRONG_EM);
            else if (DISTANCE() == 4)
            {
                p--;
                EMIT(STRONG_EM);
            }
            else if (DISTANCE() == 3)
                EMIT(STRONG);
            else if (DISTANCE() == 2)
                EMIT(EM);
            else
                EMIT(PRINTABLE);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr206:
#line 252 "wikitext_ragel.rl"
	{te = p;p--;{
            EMIT(HR);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr228:
#line 341 "wikitext_ragel.rl"
	{te = p;p--;{
            EMIT(MAIL);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr232:
#line 347 "wikitext_ragel.rl"
	{te = p;p--;{
            EMIT(PATH);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr236:
#line 492 "wikitext_ragel.rl"
	{te = p;p--;{
            EMIT(ALNUM);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr237:
#line 425 "wikitext_ragel.rl"
	{te = p;p--;{
            EMIT(LESS);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr246:
#line 264 "wikitext_ragel.rl"
	{te = p;p--;{
            EMIT(BR);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr247:
#line 258 "wikitext_ragel.rl"
	{te = p;p--;{
            EMIT(BR_CLEAR);
            {p++; cs = 135; goto _out;}
        }}
	goto st135;
tr248:
#line 282 "wikitext_ragel.rl"
	{te = p;p--;{
            if (out->column_start == 1 || last_token_type == BLOCKQUOTE || last_token_type == BLOCKQUOTE_START)
            {
                REWIND();
                if (DISTANCE() == 1)
                    EMIT(H1_START);
                else if (DISTANCE() == 2)
                    EMIT(H2_START);
                else if (DISTANCE() == 3)
                    EMIT(H3_START);
                else if (DISTANCE() == 4)
                    EMIT(H4_START);
                else if (DISTANCE() == 5)
                    EMIT(H5_START);
                else if (DISTANCE() == 6)
                    EMIT(H6_START);
                else if (DISTANCE() > 6)
                {
                    p = ts + 6;
                    EMIT(H6_START);
                }
            }
